@@ -77,6 +77,11 @@ Set start-up rendering mode (0 <=
 <= 6).
 .
 .TP
+.BI \-L \ N,...
+Use comma-separated values to set either LCD filter weights or
+subpixel geometry depending on the implemented subpixel rendering method.
+.
+.TP
 .B \-p
 Preload file in memory to simulate memory-mapping.
 .
